<?xml version="1.0"?>
<package format="2">
  <name>ufo_msgs</name>
  <version>1.0.0</version>
  <description>The ufo_msgs package</description>

  <author email="ramonaha@kth.se">Ramona Häuselmann</author>
  <maintainer email="ramonaha@kth.se">Ramona Häuselmann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>ufo</depend>
  
</package>
